--- a/semana-01/exercicio/style.css
+++ b/semana-01/exercicio/style.css
@@ -4,7 +4,6 @@
     margin: 0 auto;
     padding: 0;
     margin-top: 5px;
-    background-color: black;
 }
 
 .max-width{
@@ -16,8 +15,8 @@
     outline: none;
     padding: 10px;
     width: 100%;
-    color: rgb(88, 86, 86);;
-    background-color: white;
+    color: rgb(172, 171, 171);
+    background-color: black;
     border: none;
 }
 
@@ -26,15 +25,15 @@
 }
 
 ::placeholder{
-    color: rgb(88, 86, 86);
+    color: rgb(172, 171, 171);
 }
 
 .btn{
     padding: 8px 40px;
     margin: 10px 0;
     border: none;
-    background-color: white;
-    color: black;
+    background-color: black;
+    color: white;
     cursor: pointer;
     transition: .5s;
     float: right;
@@ -46,4 +45,8 @@
 
 .btn:active{
     background-color: rgba(2, 119, 253, 0.863);
+}
+
+span{
+    font-weight: bold;
 }
